# pyrasa

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Interactive - test_irasa_sprint.py.ipynb  LICENSE  Makefile  README.md  README.rst  aperiodic_utils.py  api.html  environment.yml  examples.html  genindex.html  index.html  install.html  irasa.py  irasa_mne.py  irasa_utils.py  mne_objs.py  objects.inv  optional-requirements.txt  peak_utils.py  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  sg_execution_times.html  tmpfu30f50h  tutorials.html
.github/: dependabot.yml
.github/workflows/: documentation.yml  test.yml
_autoexamples/: pyrasa.irasa.irasa.html  pyrasa.irasa.irasa_sprint.html  pyrasa.irasa_mne.irasa_epochs.html  pyrasa.irasa_mne.irasa_raw.html  pyrasa.utils.aperiodic_utils.compute_aperiodic_model.html  pyrasa.utils.aperiodic_utils.compute_aperiodic_model_sprint.html  pyrasa.utils.fit_funcs.AbstractFitFun.html  pyrasa.utils.fit_funcs.FixedFitFun.html  pyrasa.utils.fit_funcs.KneeFitFun.html  pyrasa.utils.peak_utils.get_band_info.html  pyrasa.utils.peak_utils.get_peak_params.html  pyrasa.utils.peak_utils.get_peak_params_sprint.html
_modules/: index.html
_modules/pyrasa/: irasa.html
_modules/pyrasa/irasa_mne/: irasa_mne.html
_modules/pyrasa/utils/: aperiodic_utils.html  fit_funcs.html  peak_utils.html
_static/: documentation_options.js
auto_examples/: index.html  sg_execution_times.html
doc/source/: api.rst  conf.py  examples.rst  index.rst  install.rst  tutorials.rst
doc/source/_autoexamples/: pyrasa.irasa.irasa.rst  pyrasa.irasa.irasa_sprint.rst  pyrasa.irasa_mne.irasa_epochs.rst  pyrasa.irasa_mne.irasa_raw.rst  pyrasa.utils.aperiodic_utils.compute_aperiodic_model.rst  pyrasa.utils.aperiodic_utils.compute_aperiodic_model_sprint.rst  pyrasa.utils.fit_funcs.AbstractFitFun.rst  pyrasa.utils.fit_funcs.FixedFitFun.rst  pyrasa.utils.fit_funcs.KneeFitFun.rst  pyrasa.utils.peak_utils.get_band_info.rst  pyrasa.utils.peak_utils.get_peak_params.rst  pyrasa.utils.peak_utils.get_peak_params_sprint.rst
doc/source/_static/: style.css
doc/source/_templates/: layout.html
doc/source/auto_examples/: index.rst  searchindex.bak  searchindex.db  searchindex.dir
doc/source/examples/: README.md  basic_functionality.ipynb  custom_fit_functions.ipynb  hset_optimization.ipynb  improving_irasa_models.ipynb  irasa_mne.ipynb  irasa_pitfalls.ipynb  irasa_sprint.ipynb
examples/: README.html  basic_func_fun.py  basic_functionality.html  basic_functionality.ipynb  check_irasa_mne.py  custom_fit_functions.html  custom_fit_functions.ipynb  custom_fit_functions.py  hset_optimization.html  hset_optimization.ipynb  improving_irasa_models.html  improving_irasa_models.ipynb  irasa_mne.html  irasa_mne.ipynb  irasa_pitfalls.html  irasa_pitfalls.ipynb  irasa_sprint.html  irasa_sprint.ipynb  irasa_sprint_example.py  test_irasa_mne.py
paper/: environment.yml  paper.bib  paper.md  run_aperiodic_sim.py  run_eo_ec.py  run_simple_sim.py  run_super_sim.py
paper/cluster_jobs/: analyze_eo_ec.py  knee_simulations.py  meta_job.py  simple_simulation.py  super_simulation.py
paper/jobs/001/slurm/: job001.json.gzip  (+175 more)
paper/notebooks/: build_cohrasa.py  check_aperiodic_fits.py  check_aperiodic_sim.py  check_basic_functionality.py  check_irasa_mne.py  check_irasa_sprint.py  check_simulations_bf.py  check_simulations_burst.py  check_simulations_fixed.py  check_simulations_knee.py  do_gao_style_ei_sim.py  extract_irasa_features.py  irasa_sprint_example.py  plot_different_sim_settings.py  plt_eo_ec.py  pyrasa_sprint_comp.py  sim_peaks.py  test_aperiodic_fits.py  test_basic_functionality.py  test_irasa_mne.py  test_irasa_sprint.py
paper/old/: legacy_fit_funcs.py  tmp_aperiodic_test.py
paper/utils/: settings.py
pyrasa/: __init__.py  __version__.py  irasa.py
pyrasa/irasa_mne/: __init__.py  irasa_mne.py  mne_objs.py
pyrasa/tests/: __init__.py  conftest.py  test_basic_irasa.py  test_compute_slope.py  test_irasa.py  test_peak_detect.py  test_settings.py
pyrasa/utils/: aperiodic_utils.py  fit_funcs.py  fitfuncs.py  input_classes.py  irasa_spectrum.py  irasa_tf_spectrum.py  irasa_utils.py  peak_utils.py  types.py
simulations/: environment.yml  run_eo_ec.py  run_simple_sim.py  run_super_sim.py
simulations/cluster_jobs/: analyze_eo_ec.py  meta_job.py  simple_simulation.py  super_simulation.py
simulations/notebooks/: aperiodic_error_check.py  build_cohrasa.py  check_aperiodic_sim.py  check_peak_p.py  check_simulations_bf.py  check_simulations_burst.py  check_simulations_fixed.py  check_simulations_knee.py  do_gao_style_ei_sim.py  extract_irasa_features.py  irasa_sprint_example.py  ole_ndsp_pyrasa_comp.py  plot_different_sim_settings.py  plt_eo_ec.py  pyrasa_sprint_comp.py  quick_sprint_check.py  sim_peak_tests.py  sim_peaks.py  test_aperiodic_fits.py  test_basic_functionality.py  test_irasa_mne.py  test_irasa_sprint.py  test_td.py
simulations/notebooks/notebooks/: check_aperiodic_fits.py  check_irasa_mne.py  check_irasa_sprint.py
simulations/sim4tests/: knee_sim__fs_500__exp1_0__exp2_1.5_knee_58.0_.npy  sim_knees.py
simulations/utils/: settings.py
tests/: __init__.py  conftest.py  extract_irasa_features.py  settings.py  test_basic_functionality.py  test_basic_irasa.py  test_compute_slope.py  test_irasa.py  test_irasa_aperiodic.py  test_irasa_knee.py  test_irasa_mne.py  test_irasa_sprint.py  test_mne.py  test_peak_detect.py  test_with_tmp.py
tests/test_data/knee_data/: knee_sim__fs_1000__exp1_0__exp2_1.0_knee_10.0_.npy  knee_sim__fs_1000__exp1_0__exp2_1.0_knee_15.0_.npy  knee_sim__fs_1000__exp1_0__exp2_1.0_knee_25.0_.npy  knee_sim__fs_1000__exp1_0__exp2_1.5_knee_125.0_.npy  knee_sim__fs_1000__exp1_0__exp2_1.5_knee_32.0_.npy  knee_sim__fs_1000__exp1_0__exp2_1.5_knee_58.0_.npy  knee_sim__fs_1000__exp1_0__exp2_2.0_knee_100.0_.npy  knee_sim__fs_1000__exp1_0__exp2_2.0_knee_225.0_.npy  knee_sim__fs_1000__exp1_0__exp2_2.0_knee_625.0_.npy  knee_sim__fs_500__exp1_0__exp2_1.0_knee_10.0_.npy  (+17 more)
(+1664 files in other folders)
