[project]
name = "PyRASA"
dynamic = ["version"]
description = "Spectral parametrization based on IRASA"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    {name = "Fabian Schmidt", email = "schmidtfa91@gmail.com"},
    {name = "Thomas Hartmann", email = "thomas.hartmann@th-ht.de"}
]
homepage = "https://github.com/schmidtfa/pyrasa"
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
]
keywords=['spectral parametrization', 'oscillations', 'power spectra', '1/f']
requires-python = ">= 3.11"
dependencies = ["numpy", "pandas", "scipy>=1.12"]

[project.optional-dependencies]
irasa_mne = ['mne']

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
pyrasa = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest --cov=plus_sync --cov-report=lcov"
ruff = "ruff format && ruff check --fix"
ruff_ci = "ruff check"

[tool.pixi.dependencies]
hatch = ">=1.12.0,<1.13"
ipython = ">=8.26.0,<8.27"
ipykernel = ">=6.29.5,<6.30"
ruff = ">=0.5.2,<0.6"
pre-commit = ">=3.7.1,<3.8"
pytest = ">=8.2.2,<8.3"
pytest-cov = ">=5.0.0,<5.1"
neurodsp = ">=2.2.0,<2.3"

[tool.hatch.version]
source = "regex_commit"
path = "pyrasa/__version__.py"
tag_sign = false

[tool.ruff]
line-length = 120
exclude = ['paper', 'examples']

[tool.ruff.lint]
extend-select = [
    'E',
    'W',
    'I',
    'UP',
    'C90',
    'N',
    'PTH',
    'SIM',
    'TCH',
    'PL'
]
ignore = ['PLR0913']


[tool.ruff.format]
quote-style = 'single'
