[project]
name = "PyRASA"
dynamic = ["version"]
description = "Spectral parametrization based on IRASA"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    {name = "Fabian Schmidt", email = "schmidtfa91@gmail.com"},
    {name = "Thomas Hartmann", email = "thomas.hartmann@th-ht.de"}
]

classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Typing :: Typed'
]
keywords=['spectral parametrization', 'oscillations', 'power spectra', '1/f']
requires-python = ">= 3.11"
dependencies = ["numpy>=1.26,<3", "pandas>=2.1,<3", "scipy>=1.12", "attrs"]

[project.optional-dependencies]
mne = ['mne']

[project.urls]
repository = "https://github.com/schmidtfa/pyrasa"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pyrasa = { path = ".", editable = true }

[tool.pixi.feature.jupyter.dependencies]
mne = ">=1.7.0,<2"
jupyter = ">=1.0.0,<1.1"
ipython = ">=8.26.0,<8.27"
ipykernel = ">=6.29.5,<6.30"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.9.1,<3.10"

[tool.pixi.feature.doc.dependencies]
sphinx = "*"
pydata-sphinx-theme = "*"
sphinx-autobuild = "*"
numpydoc = "*"
nbsphinx = "*"

[tool.pixi.feature.doc.pypi-dependencies]
sphinx_gallery = "*"
sphinxcontrib-serializinghtml = "*"

[tool.pixi.tasks]
test = "pytest --cov=pyrasa --cov-report=lcov"
lint = "ruff format && ruff check --fix"
lint_ci = "ruff check"
check_types = "mypy pyrasa tests"
version_minor = "hatch version minor && hatch version dev"
version_fix = "hatch version fix && hatch version dev"
doc_dev = "sphinx-autobuild --ignore 'doc/source/auto_examples/*' doc/source doc/build"
build_docs = "cd doc; make clean; make html"

[tool.pixi.dependencies]
hatch = ">=1.12.0,<1.13"
ipython = ">=8.26.0,<8.27"
ipykernel = ">=6.29.5,<6.30"
ruff = ">=0.5.2,<0.6"
pre-commit = ">=3.7.1,<3.8"
pytest = ">=8.2.2,<8.3"
pytest-cov = ">=5.0.0,<5.1"
neurodsp = ">=2.2.0,<2.3"
mypy = ">=1.10.1,<2"
pandas-stubs = ">=2.2.2.240603,<3"
tabulate = ">=0.9.0,<0.10"

[tool.pixi.feature]
py311 = {dependencies = {python="3.11.*"}}
py312 = {dependencies = {python="3.12.*"}}
np1 = {dependencies = {numpy="1.26.*"}}
np2 = {dependencies = {numpy="2.*"}}
pd21 = {dependencies = {pandas="2.1.*"}}
pd22 = {dependencies = {pandas="2.2.*"}}
pd_latest = {dependencies = {pandas="*"}}

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
mne = {features = ["mne"], solve-group = "default"}
jupyter = {features = ["jupyter"], solve-group = "default"}
doc = {features = ["doc", "mne"], solve-group = "default"}
testpy311np1pd21 = ['py311', 'np1', 'pd21', 'mne']
testpy311np1pd22 = ['py311', 'np1', 'pd22', 'mne']
testpy311np1pd-latest = ['py311', 'np1', 'pd_latest', 'mne']
testpy311np2pd22 = ['py311', 'np2', 'pd22', 'mne']
testpy311np2pd-latest = ['py311', 'np2', 'pd_latest', 'mne']
testpy312np1pd21 = ['py312', 'np1', 'pd21', 'mne']
testpy312np1pd22 = ['py312', 'np1', 'pd22', 'mne']
testpy312np1pd-latest = ['py312', 'np1', 'pd_latest', 'mne']
testpy312np2pd22 = ['py312', 'np2', 'pd22', 'mne']
testpy312np2pd-latest = ['py312', 'np2', 'pd_latest', 'mne']

[tool.hatch.version]
source = "regex_commit"
path = "pyrasa/__version__.py"
tag_sign = false

[tool.ruff]
line-length = 120
exclude = ['simulations', 'examples', 'paper']

[tool.ruff.lint]
extend-select = [
    'E',
    'W',
    'I',
    'UP',
    'C90',
    'N',
    'PTH',
    'SIM',
    'TCH',
    'PL'
]
ignore = ['PLR0913']

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=pyrasa/__version__.py"

[tool.mypy]
disable_error_code = "import-untyped"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pyrasa.*"
disallow_untyped_defs = true
